# parser-combinators

./: .travis.yml  CHANGELOG.md  README.md  cabal.project  parser-combinators.cabal  stack.yaml
.github/workflows/: ci.yaml
Control/Applicative/: Combinators.hs  Permutations.hs
Control/Applicative/Combinators/: NonEmpty.hs
Control/Monad/: Combinators.hs  Permutations.hs
Control/Monad/Combinators/: Expr.hs  NonEmpty.hs
parser-combinators-tests/: LICENSE.md  README.md  parser-combinators-tests.cabal
parser-combinators-tests/tests/Control/Applicative/: CombinatorsSpec.hs  PermutationsSpec.hs
parser-combinators-tests/tests/Control/Monad/: CombinatorsSpec.hs  PermutationsSpec.hs
parser-combinators-tests/tests/Control/Monad/Combinators/: ExprSpec.hs
tests/Control/Applicative/: CombinatorsSpec.hs
tests/Control/Monad/: CombinatorsSpec.hs
tests/Test/: Util.hs
