cabal-version:   2.4
name:            parser-combinators-tests
version:         1.3.0
license:         BSD-3-Clause
license-file:    LICENSE.md
maintainer:      Mark Karpov <markkarpov92@gmail.com>
author:          Mark Karpov <markkarpov92@gmail.com>
tested-with:     ghc ==8.10.7 ghc ==9.0.1 ghc ==9.2.1
homepage:        https://github.com/mrkkrp/parser-combinators
bug-reports:     https://github.com/mrkkrp/parser-combinators/issues
synopsis:        Test suite of parser-combinators
description:     Test suite of parser-combinators.
category:        Parsing
build-type:      Simple
extra-doc-files: README.md

source-repository head
    type:     git
    location: https://github.com/mrkkrp/parser-combinators.git

flag dev
    description: Turn on development settings.
    default:     False
    manual:      True

test-suite test-suite
    type:             exitcode-stdio-1.0
    main-is:          Spec.hs
    build-tools:      hspec-discover >=2.0 && <3.0
    hs-source-dirs:   tests
    other-modules:
        Control.Applicative.CombinatorsSpec
        Control.Applicative.PermutationsSpec
        Control.Monad.Combinators.ExprSpec
        Control.Monad.CombinatorsSpec
        Control.Monad.PermutationsSpec

    default-language: Haskell2010
    build-depends:
        QuickCheck >=2.7 && <2.15,
        base >=4.13 && <5.0,
        hspec >=2.0 && <3.0,
        hspec-expectations >=0.8 && <0.9,
        hspec-megaparsec >=2.0 && <3.0,
        megaparsec >=8.0 && <10.0,
        megaparsec-tests >=8.0 && <10.0,
        parser-combinators ==1.3.0

    if flag(dev)
        ghc-options: -Wall -Werror

    else
        ghc-options: -O2 -Wall
